# yanyaengine

./: Cargo.toml  README.md
shaders/: default.frag  default.vert
src/: allocators.rs  assets.rs  camera.rs  control.rs  engine.rs  lib.rs  object.rs  object_factory.rs  occluding_plane.rs  solid_object.rs  text_factory.rs  text_object.rs  transform.rs  window.rs
src/camera/: camera_transform.rs
src/object/: game_object.rs  model.rs  object_allocator.rs  object_transform.rs  resource_uploader.rs  texture.rs
src/object/game_object/: builder_wrapper.rs
