[package]
name = "yanyaengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
image = "0.24.6"
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
parking_lot = "0.12.1"
serde = { version = "1.0.164", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
font-kit = "0.13.2"
pathfinder_geometry = "0.5.1"
ahash = "0.8.11"
