[package]
name = "yanyaengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.23.0"
image = "0.25.6"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
parking_lot = { version = "0.12.3", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0", features = ["serde", "derive"] }
strum = { version = "0.27", features = ["derive"] }
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = { version = "0.30.10", features = ["rwh_05", "serde"] }
foldhash = "0.1.5"
ab_glyph = "0.2.29"
